	               * resulting pdata.frame is ordered by individual, then time index,
	               * when duplicate couples (id-time) are created, a warning is issued,
	               * new argument 'stringAsFactors'.
	* pvar: * fixed warning about var on factor variable (var on factors is deprecated as of R 3.2.3),
	        * fixed corner case with one group being all NA and other non-varying,
	        * print.pvar: better handling of NA values.
	* lag/lead: fixed bug with dropped factor levels, added testfile tests/test_lag_lead_factor_levels.R.
	* is.pconsecutive: * new function to check if time periods are consecutive per individual,
	                   * better NA handling, added argument rm.na.tindex.
	* pgmm: fixed bugs affecting the instrument matrix in the following cases:
			  * gmm instruments are collapsed and restricted in lag length;
			  * first lags are used as gmm instruments;
			  * gmm instruments are collapsed in system GMM;
			  * gmm instruments are restricted in lag length in system GMM.
	* punbalancedness: data frame interface gains 'index' argument.
	* within_intercept: new function to calculate an overall intercept along its standard error for FE models
	                a la Stata (and Gretl), accepts argument '.vcov' for user defined vcov
	* added help topic on package as a whole (?`plm-package`) for sake of completeness
	* summary.plm: * argument '.vcov' can also be a function (before, only only matrix was possible)
	               * internal: the furnished vcov is saved in the summary.plm object in object$rvcov
	                           (vcov function name in attr(object$rvcov, which="rvcov.name")
	* (internal) plm:::Ftest: * gained '.vcov' argument, which enables robust F test and chi-sq test
	                            [not yet weaved in summary.plm]
	* (internal) furnished vcovs gain attribute "cluster" which give info about clustering, e.g. "group" or "time"
	